--- a/public/assets/css/support.css
+++ b/public/assets/css/support.css
@@ -191,6 +191,18 @@
     margin-bottom: 20px;
 }
 
+/* Anti-Spam Honeypot (Visually Hidden) */
+.visual-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
 .btn-outline {
     background: transparent;
     border: 2px solid var(--npt-black);
